--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
+    "eggs": "^0.2.4",
     "express": "~4.12.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "stylus": "0.42.3"
+    "socket.io": "1.2.0",
+    "stylus": "0.42.3",
+    "basic-auth": "1.0.4",
+    "bcryptjs": "2.3.0",
+    "jsonwebtoken": "7.1.9",
+    "mongoose": "4.6.0",
+    "nodemailer": "2.6.0",
+    "randomstring": "1.1.5"
   }
 }
